# faceservice-svn-to-git

trunk/: ChangeLog  Makefile.am  README  acinclude.m4  bootstrap.sh  configure  configure.ac
trunk/debian/: changelog  control  copyright
trunk/src/: Makefile.am  faceservice.cpp
