EXTRA_DIST = bootstrap.sh configure cgicc.m4 install-sh face_detect.xml
SUBDIRS = src

faceservicedir = $(datadir)/faceservice
faceservice_DATA = face_detect.xml

MAINTAINERCLEANFILES = \
        src/Makefile.in \
        tests/Makefile.in \
        tests/atconfig \
        doc/Makefile.in \
        Makefile.in \
        aclocal.m4 \
        compile \
	config.guess \
        config.h.in \
	config.sub \
        configure \
        depcomp \
        install-sh \
        missing
